EEP/y.output
Grammar

    0 $accept: axiome $end

    1 axiome: exp

    2 exp: terme expp

    3 expp: PLUS terme expp
    4     | %empty

    5 terme: facteur termep

    6 termep: MULT facteur termep
    7       | %empty

    8 facteur: PG exp PD
    9        | ID
   10        | CSTE


Terminals, with rules where they appear

$end (0) 0
error (256)
CSTE (258) 10
PG (259) 8
PD (260) 8
ID (261) 9
PLUS (262) 3
MULT (263) 6


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
axiome (10)
    on left: 1, on right: 0
exp (11)
    on left: 2, on right: 1 8
expp (12)
    on left: 3 4, on right: 2 3
terme (13)
    on left: 5, on right: 2 3
termep (14)
    on left: 6 7, on right: 5 6
facteur (15)
    on left: 8 9 10, on right: 5 6


State 0

    0 $accept: . axiome $end

    CSTE  shift, and go to state 1
    PG    shift, and go to state 2
    ID    shift, and go to state 3

    axiome   go to state 4
    exp      go to state 5
    terme    go to state 6
    facteur  go to state 7


State 1

   10 facteur: CSTE .

    $default  reduce using rule 10 (facteur)


State 2

    8 facteur: PG . exp PD

    CSTE  shift, and go to state 1
    PG    shift, and go to state 2
    ID    shift, and go to state 3

    exp      go to state 8
    terme    go to state 6
    facteur  go to state 7


State 3

    9 facteur: ID .

    $default  reduce using rule 9 (facteur)


State 4

    0 $accept: axiome . $end

    $end  shift, and go to state 9


State 5

    1 axiome: exp .

    $default  reduce using rule 1 (axiome)


State 6

    2 exp: terme . expp

    PLUS  shift, and go to state 10

    $default  reduce using rule 4 (expp)

    expp  go to state 11


State 7

    5 terme: facteur . termep

    MULT  shift, and go to state 12

    $default  reduce using rule 7 (termep)

    termep  go to state 13


State 8

    8 facteur: PG exp . PD

    PD  shift, and go to state 14


State 9

    0 $accept: axiome $end .

    $default  accept


State 10

    3 expp: PLUS . terme expp

    CSTE  shift, and go to state 1
    PG    shift, and go to state 2
    ID    shift, and go to state 3

    terme    go to state 15
    facteur  go to state 7


State 11

    2 exp: terme expp .

    $default  reduce using rule 2 (exp)


State 12

    6 termep: MULT . facteur termep

    CSTE  shift, and go to state 1
    PG    shift, and go to state 2
    ID    shift, and go to state 3

    facteur  go to state 16


State 13

    5 terme: facteur termep .

    $default  reduce using rule 5 (terme)


State 14

    8 facteur: PG exp PD .

    $default  reduce using rule 8 (facteur)


State 15

    3 expp: PLUS terme . expp

    PLUS  shift, and go to state 10

    $default  reduce using rule 4 (expp)

    expp  go to state 17


State 16

    6 termep: MULT facteur . termep

    MULT  shift, and go to state 12

    $default  reduce using rule 7 (termep)

    termep  go to state 18


State 17

    3 expp: PLUS terme expp .

    $default  reduce using rule 3 (expp)


State 18

    6 termep: MULT facteur termep .

    $default  reduce using rule 6 (termep)
